# ai-chief-of-staff

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  constitution.md  pyproject.toml  requirements.txt
.claude/skills/chief-of-staff/: SKILL.md
.codex/skills/chief-of-staff/: SKILL.md
.github/workflows/: daily-briefing.yml
.kimi/skills/chief-of-staff/: SKILL.md
.kimi/skills/chief-of-staff/assets/: briefing.html.j2
.kimi/skills/chief-of-staff/references/: briefing-template.md  connectors.md
.kimi/skills/chief-of-staff/scripts/: deliver.py  memory_manager.py  run_briefing.py  schedule.py  synthesize.py
.kimi/skills/chief-of-staff/scripts/connectors/: calendar.py  custom.py  email.py  tasks.py  web.py
chief_of_staff/: __init__.py  __main__.py  cli.py  config.py  memory.py  runner.py  synthesis.py
chief_of_staff/connectors/: __init__.py  calendar.py  custom.py  email.py  tasks.py  web.py
chief_of_staff/delivery/: __init__.py  console.py  email.py  notion.py  slack.py  telegram.py
chief_of_staff/references/: connectors.md
config/: chief_of_staff.toml
docs/: _config.yml  architecture.md  index.md  mcp-setup.md  setup-kimi-personal.md  setup.md  skill-portal-strategy.md  telegram-setup.md
memory/: preferences.md
scripts/: install.py  run_briefing.py
